--- a/poster.Rmd
+++ b/poster.Rmd
@@ -84,9 +84,9 @@ plot(qrcode::qr_code('https://github.com/DLEIVA/TrobadaPCCSS25'))
 
 # Resultats
 
-78 estudiants proporcionen un mínim de 10 mesures setmanals ($14\%$ de la mostra potencial). S’han trobat dos perfils motivacionals principals: un grup format per persones 43 persones (grup A) es caracteritza per majors nivells d'amotivació i de regulació extrínseca social. El segon grup (B) format per 35 persones presenta majors nivells de motivació intrínseca, regulació (identificada i introjectada), així como motivació extrínseca material al llarg de tot el periode d'estudi.
+78 estudiants proporcionen un mínim de 10 mesures setmanals ($14\%$ de la mostra potencial). S’han trobat dos perfils motivacionals principals: un grup format per 43 persones (grup A) es caracteritza per majors nivells d'amotivació i de regulació extrínseca social. El segon grup (B), format per 35 persones, presenta majors nivells de motivació intrínseca, regulació (identificada i introjectada), així com de motivació extrínseca material al llarg de tot el periode d'estudi.
 
-S’han trobat diferències significatives en el rendiment subjectiu i al nivell d’absentisme al llarg del curs, sent el grup B el que presenta un major rendiment percebut i un menor nivell d'absentisme. Entre les causes d'absentisme, el grup A reporta un major número de raons relacionades amb la metodologia docent (continguts, dinàmiques de les sessions, actuació docent). Encara no disposem de les dades de rendiment objectiu.
+S’han trobat diferències significatives en el rendiment subjectiu i en el nivell d’absentisme al llarg del curs, sent el grup B el que presenta un major rendiment percebut i un menor nivell d'absentisme. Entre les causes d'absentisme, el grup A reporta una major puntuació en raons relacionades amb la metodologia docent (continguts, dinàmiques de les sessions, actuació docent). Encara no disposem de les dades de rendiment objectiu.
 
 ```{r out.width="100%",fig.height=12}
 par(mar=c(.5,.5,0.1,.1))
